fix css input-wrapper spacing on profile page

--- a/public/styles/pages/profile.css
+++ b/public/styles/pages/profile.css
@@ -51,3 +51,7 @@ aside p {
 main {
   flex: 1;
 }
+
+.input-wrapper {
+  width: 50%;
+}
